frontend style and user interface improvement

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -17,6 +17,11 @@
   position: relative;
 }
 
+.file-input {
+  width: 200px;
+  margin-left: -12px;
+}
+
 .search-tag {
   text-align: left;
   padding: 10px;
